# vtinterco

./: .dir-locals.el  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
screenshots/: alphabetflags.six  indiabig.six  indiatango3.six  menu.six  paparomeo.six
src/: capabilities.cpp  capabilities.h  coloring.cpp  coloring.h  debug.cpp  debug.h  flags.cpp  flags.h  font.cpp  font.h  main.cpp  menu.cpp  menu.h  os.cpp  os.h  quizzes.cpp  quizzes.h  signals.cpp  signals.h  utils.cpp  utils.h  viewer.cpp  viewer.h  vt.cpp  vt.h
